updated footer css

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -76,3 +76,12 @@ span {
 ;
 		height: 30px;
 }
+
+
+.footer {
+    position:fixed;
+    width:100%;
+    left:0;
+    bottom:0;
+    margin-bottom: 0;
+}
