--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -8,7 +8,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+	<!--	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">-->
+	    <!--Line above is old from MEAN.js - deafult, line below is for hybrid mobile-->
+	    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
@@ -48,6 +50,7 @@
 </head>
 
 <body class="ng-cloak">
+
 	<header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
 	<section class="content" style="background: #222;">
 		<section class="container">
@@ -61,6 +64,7 @@
 	</script>
 
 	<!--Application JavaScript Files-->
+    <!--Find jsFiles here: config/env/*.js file(s)-->
 	{% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
 
 	{% if process.env.NODE_ENV === 'development' %}
