--- a/public/modules/activities/views/list-public-activities.client.view.html
+++ b/public/modules/activities/views/list-public-activities.client.view.html
@@ -13,6 +13,7 @@
                         <span data-ng-bind="activity.created | date:'medium'"></span>
                         by
                         <span data-ng-bind="activity.user.displayName"></span>
+                        <!-- Fix the display name -->
                     </small>
                     <h4 class="list-group-item-heading" data-ng-bind="activity.name"></h4>
 
