--- a/public/modules/experiences/views/view-experience.client.view.html
+++ b/public/modules/experiences/views/view-experience.client.view.html
@@ -20,8 +20,8 @@
 	              </a>
 	              <br>
 	              <br>
-	              <a class="btn btn-success" style="width: 100%;" data-ng-click="remove();">
-	                  <i class="fa fa-trash"></i> Remove
+	              <a class="btn btn-success" style="width: 100%;" data-ng-click="archive();">
+	                  <i class="fa fa-file-archive-o"></i> Archive
 	              </a>
 	          </div>
 	      </div>
