--- a/public/modules/experiences/views/view-experience.client.view.html
+++ b/public/modules/experiences/views/view-experience.client.view.html
@@ -20,8 +20,11 @@
 	              </a>
 	              <br>
 	              <br>
-	              <a class="btn btn-success" style="width: 100%;" data-ng-click="archive();">
+								<a class="btn btn-success" style="width: 100%;" data-ng-click="archive();" data-ng-show="(((authentication.user) && (authentication.user._id == experience.user._id))) && experience.archived == 0">
 	                  <i class="fa fa-file-archive-o"></i> Archive
+	              </a>
+	              <a class="btn btn-success" style="width: 100%;" data-ng-click="update();" data-ng-show="(((authentication.user) && (authentication.user._id == experience.user._id))) && experience.archived == 1">
+	                  <i class="fa fa-file-o"></i> Restore
 	              </a>
 	          </div>
 	      </div>
