--- a/public/modules/activities/views/list-activities.client.view.html
+++ b/public/modules/activities/views/list-activities.client.view.html
@@ -20,6 +20,9 @@
                     <div class="badge" ng-show="{{(activity.privacy === 1)}}">
                         Public
                     </div>
+                    <div class="badge pull-right" ng-show="{{activity.archived}}">
+                        Archived
+                    </div>
 
                 <hr>
                 <div style="color: white;">
