--- a/public/modules/experiences/views/list-public-experiences.client.view.html
+++ b/public/modules/experiences/views/list-public-experiences.client.view.html
@@ -4,12 +4,12 @@
     </div>
     <div class="list-group" style="margin-bottom: 100px;">
         <a data-ng-repeat="experience in experiences" data-ng-href="#!/experiences/{{experience._id}}" class="list-group-item">
-          <h6 style="text-align: right; color: white;" ng-show="{{(experience.user._id === authentication.user._id)}}">
+          <div class="badge" style="text-align: right; color: white;" ng-show="{{(experience.user._id === authentication.user._id)}}">
               My Experience
-          </h6>
-          <h6 style="text-align: right; color: white;" ng-show="{{(experience.user._id !== authentication.user._id)}}">
-              {{experience.user.displayName}}'s Experience
-          </h6>
+          </div>
+          <div class="badge pull-right" ng-show="{{experience.archived}}">
+              Archived
+          </div>
           <small class="list-group-item-text">
             Posted on
             <span data-ng-bind="experience.created | date:'medium'"></span>
