--- a/public/modules/experiences/views/create-experience.client.view.html
+++ b/public/modules/experiences/views/create-experience.client.view.html
@@ -114,7 +114,7 @@
                 <div class="form-group">
                   <div>
                       <input class="form-control"
-                            ng-change="updateName()"
+                             ng-change="updateName()"
                              style="-webkit-border-radius: 7px;
                              -moz-border-radius: 7px;
                              border-bottom: 3px #222222 dotted;
@@ -126,7 +126,28 @@
                              "
                              type="text"
                              data-ng-model="selectedVerb"
-                             id="selectedVerb" class="form-control" placeholder="Past Tense Verb" required>
+                             id="selectedVerb" class="form-control" placeholder="helping verb" required>
+                  </div>
+                </div>
+              </i>
+        <!-- </div> -->
+        <!-- <div class="row"> -->
+              <i class="col-lg-12">
+                <div class="form-group">
+                  <div data-ng-init="findPersonalActivities()">
+                      <select class="form-control"
+                              ng-change="updateName()"
+                              style="-webkit-border-radius: 7px;
+                                     -moz-border-radius: 7px;
+                                     border-bottom: 3px #222222 dotted;
+                                     -webkit-appearance: none;
+                                     -moz-appearance: none;
+                                     appearance: none;
+                                     text-align: center;"
+                              ng-options="item as item.name for item in activities track by item._id"
+                              ng-model="selected2Activity" required>
+                        <option style="color: white;" value="" disabled="">Activity</option>
+                      </select>
                   </div>
                 </div>
               </i>
