--- a/public/modules/core/views/privacy.client.view.html
+++ b/public/modules/core/views/privacy.client.view.html
@@ -1,7 +1,7 @@
 <h1>Privacy Policy</h1>
 <hr>
 
-<p>This Privacy Policy governs the manner in which log-grower collects, uses, maintains and discloses information collected from users (each, a "User") of the <a href="http://log-grower.herokuapp.com/">http://log-grower.herokuapp.com/</a> website ("Site").</p>
+<p>This Privacy Policy governs the manner in which log-grower collects, uses, maintains and discloses information collected from users (each, a "User") of the <a href="http://logro.io">http://logro.io</a> website ("Site").</p>
 
 <h3>Personal identification information</h3>
 <p>We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users visit our site, register on the site, fill out a form, and in connection with other activities, services, features or resources we make available on our Site.Users may be asked for, as appropriate, name, email address. We will collect personal identification information from Users only if they voluntarily submit such information to us. Users can always refuse to supply personally identification information, except that it may prevent them from engaging in certain Site related activities.</p>
